csi/ceph/svc-out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rook-ceph-rgw
    app.kubernetes.io/component: cephobjectstores.ceph.rook.io
    app.kubernetes.io/created-by: rook-ceph-operator
    app.kubernetes.io/instance: my-store
    app.kubernetes.io/managed-by: rook-ceph-operator
    app.kubernetes.io/name: ceph-rgw
    app.kubernetes.io/part-of: my-store
    ceph_daemon_id: my-store
    ceph_daemon_type: rgw
    rgw: my-store
    rook.io/operator-namespace: rook-ceph
    rook_cluster: rook-ceph
    rook_object_store: my-store
  name: rook-ceph-rgw-my-store-out
  namespace: rook-ceph
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 31483
  selector:
    app: rook-ceph-rgw
    ceph_daemon_id: my-store
    rgw: my-store
    rook_cluster: rook-ceph
    rook_object_store: my-store
  sessionAffinity: None
  type: NodePort
