csi/ceph/object-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oss
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: oss.shilintan.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rook-ceph-rgw-my-store
                port:
                  number: 80
